--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,7 +159,7 @@ dependencies {
 // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
 // Biometrics
-    implementation 'androidx.biometric:biometric:1.4.0-alpha01'
+    implementation 'androidx.biometric:biometric:1.3.0'
 // Crypto
     implementation 'androidx.security:security-crypto:1.1.0-alpha06'
     // image loading
